[feat] Added bonus endpoints
